2012-03-20  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testSystem.cpp: Adapt testcase using NewClient.

	* src/mcs/NewContext.cpp: Fix bug of recalculating k1, k2.

	* src/dmcs/DLVEvaluator.cpp: Correctly feed heads into program stream.

	* include/parser/ParserState.h: Set epsilon bit.

	* include/dmcs/Evaluator.h: Use EvaluatorWrapper.
	* src/dmcs/Evaluator.cpp: Likewise.
	* src/dmcs/DLVInstantiator.cpp: Likewise.

	* include/network/Makefile.am: Add NewClient.h.
	* src/network/Makefile.am: Add NewClient.cpp.

	* src/network/NewHandler.cpp: Also accept HEADER_NEXT.

	* include/network/NewClient.h: New file.
	* src/network/NewClient.cpp: Likewise.

	* include/mcs/ForwardMessage.h: Add Ptr type.
	Add default value for k1, k2.

2012-03-19  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewBaseDispatcher.h: Move message_dispatcher out ouf dispatcher.
	Now use it at the call of startup().
	* src/network/NewThreadFactory.cpp: Likewise.
	* src/network/NewServer.cpp: Likewise.
	* include/mcs/RequestDispatcher.h: Likewise.
	* include/mcs/NewOutputDispatcher.h: Likewise.
	* include/mcs/NewJoinerDispatcher.h: Likewise.

	* src/network/NewNeighborThread.cpp: Clean up.

	* src/dmcs/DLVEvaluator.cpp: Nice log messages.
	* src/mcs/NewContext.cpp: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* src/network/NewNeighborOut.cpp: Likewise.
	* src/network/NewOutputThread.cpp: Likewise.
	* src/network/NewServer.cpp: Likewise.
	* src/parser/DLVResultParser.cpp: Likewise.

	* include/network/NewHandler.h: Simplify handle_finalize.
	* src/network/NewHandler.cpp: Likewise.

	* testsuite/testSystem.cpp: Add testcase for intermediate contexts.

	* testsuite/DmcsClientTest.cpp: Fix input to shutdown query.

	* src/mcs/BeliefStateOffset.cpp: Disable assertion.

	* src/mcs/BackwardMessage.cpp: Fix print().

	* include/network/NewServer.h: Initialize threads at construction time.
	* src/network/NewServer.cpp: Likewise.
